--- a/whatslab/public/index.html
+++ b/whatslab/public/index.html
@@ -30,7 +30,7 @@
     -->
     <title>WhatsLab</title>
   </head>
-  <body>
+  <body id='body'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
